# ErikBoot

./: .gitignore  CMakeLists.txt  COPYING  Makefile  README.MD  efi-aarch64.cmake  efi-x64.cmake  x86_64.cmake
efi/: COPYING
include/: elf.h  erikboot.h  file.h  paging.h
include/UEFI/Arm/: ProcessorBind.h
include/UEFI/Ebc/: ProcessorBind.h
src/: elf.c  elf.h  file.c  main.c
src/arch/aarch64/: paging.c
src/arch/x86_64/: paging.c
